--- a/themes/nexT/_config.yml
+++ b/themes/nexT/_config.yml
@@ -1020,7 +1020,7 @@ canvas_sphere: false
 # alpha: The transparency of the ribbon.
 # zIndex: The display level of the ribbon.
 canvas_ribbon:
-  enable: true
+  enable: false
   size: 300
   alpha: 0.1
   zIndex: -1
