--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ aplayer:
 
 # 2d桌面live
 live2d:
-  enable: true
+  enable: false
   scriptFrom: local
   pluginRootPath: live2dw/
   pluginJsPath: lib/
